# translation-cli-temp

./: .dockerignore  .gitignore  .nvim.lua  Dockerfile  README.md  aiclient.py  docker-compose.yml  excel_to_md.py  fs_translate.py  jargon_list.py  main-old.py  main.py  mid.md  mid1.md  mid1_assets.md  mid2.md  mid3.md  mmas.py  mmas_aggregate.py  mmas_classify.py  mmas_v2.py  mmas_v4.py  output.md  pyproject.toml  pyrightconfig.json  step_2_defn.md  track_time.py
data/bem/: FINANCIAL_STATEMENTS.XLSX  notes-cut.docx
data/bts/: BTS_FINANCIAL_STATEMENTS_2566_Cut_version.XLS  notes-cut.docx
data/gpsc/: FINANCIAL_STATEMENTS-.XLSX  FINANCIAL_STATEMENTS.XLSX  dbd-fs-word-jargon.csv  dbd-fs-word-jargon.xlsx  notes-cut.docx  notes.docx
data/gulf/: FINANCIAL_STATEMENTS.XLSX  notes-cut.docx
data/prompts/: mmas-extraction-aggregated.txt  mmas-extraction-line-items-v2.txt  mmas-extraction-line-items-v3.txt  mmas-extraction-line-items-v4.txt  mmas-extraction-line-items.txt  mmas-labeling-mmas-list.txt  mmas-labeling.txt  mmas_grouping.txt
data/ptt/: FINANCIAL_STATEMENTS.XLSX  PTTEP_Financial statement_TH_2567_Cut version.XLSX  notes-cut.docx
data/templates/: MMAS template.xlsx  mmas-energy-mapping.txt  mmas_template-sectioned-no-desc.xlsx  mmas_template-sectioned.xlsx
fst/: cli.py
fst/ai/: client.py
fst/cli/: main-llm-excel-mod.py  main-llm-excel-optimize-input.py  main-llm-excel.py  main-llm.py  main.py
fst/core/spread/: mmas.py  mmas_aggregate.py  mmas_classify.py  mmas_v2.py  mmas_v3.py  (+1 more)
fst/utils/: excel_to_md.py  track_time.py
stubs/tiktoken/: __init__.pyi
(+1 files in other folders)
