[tool.poetry]
name = "fst"
version = "0.1.0"
description = "A financial statement processing tool."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openpyxl = "*"
pandas = "*"
tiktoken = "*"
asyncio = "*"

# Custom modules (ensure these are structured within your project).
fs_translate = {path = "./fs_translate"}
mmas_v4 = {path = "./mmas_v4"}
mmas_classify = {path = "./mmas_classify"}
mmas_aggregate = {path = "./mmas_aggregate"}

[tool.poetry.scripts]
fst = "fst.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
